# Monitor-Server

./: .gitignore  README.md  monitor.launch
YunleProtocol/: vehicle2server.md  多车协议.docx
gateway_server/: CMakeLists.txt  package.xml
gateway_server/launch/: test_gateway.launch
gateway_server/src/: app.py  connector.py  monitor.py
gateway_vehicle/: CMakeLists.txt  package.xml
gateway_vehicle/config/: config.ini
gateway_vehicle/launch/: test_gateway.launch
gateway_vehicle/src/: app.py
monitor/: CMakeLists.txt
monitor/include/monitor/: __init__.py  test.py
monitor/protoc/: PoseStamped.proto  PoseStamped_pb2.py
monitor/src/: server.py
msgs/monitor_msgs/: CMakeLists.txt  package.xml
msgs/monitor_msgs/msg/: PoseState.msg
static_map/: README.md
static_map/launch/: load_map_3d.launch
test/: README.md
visualization/: CMakeLists.txt  package.xml
visualization/launch/: visualization.launch
visualization/rviz/: visualization.rviz
visualization_module/: CMakeLists.txt
visualization_module/cfg/: adjust_config.cfg
visualization_module/launch/: dynamic_visualization.launch  test_viz.launch
visualization_module/rviz/: rviz.rviz
visualization_module/src/: dynamic_visualization.cpp  main.cpp
